# wurstgpt

./: LICENSE  README.md  pyproject.toml
.github/workflows/: trigger.yml
data/: quizlet.csv
wurstgpt/: mail.py  main.py
